--- a/debian/rules
+++ b/debian/rules
@@ -193,11 +193,14 @@ override_dh_auto_install:
 	sed -i "/dependency_libs/ s/'.*'/''/" debian/tmp/usr/lib/*.la
 	sed -i "/dependency_libs/ s/'.*'/''/" debian/tmp/usr/lib/frr/modules/*.la
 
+override_dh_install_init:
+	dh_installinit --restart-after-upgrade
+
 override_dh_systemd_start:
 	dh_systemd_start frr.service
 
 override_dh_systemd_enable:
-	dh_systemd_enable frr.service
+	dh_systemd_enable --restart-after-upgrade frr.service
 
 # backports
 SRCPKG = frr
