--- a/debian/control
+++ b/debian/control
@@ -24,17 +24,17 @@ Build-Depends:
  libsnmp-dev,
  libssh-dev <!pkg.frr.nortrlib>,
  libsystemd-dev <!pkg.frr.nosystemd>,
- libyang-dev (>= 0.16.74),
+ libyang-dev (>= 1.0.184),
  pkg-config,
  python3,
  python3-dev,
  python3-sphinx,
  python3-pytest <!nocheck>,
  texinfo (>= 4.7)
-Standards-Version: 4.2.1
+Standards-Version: 4.4.1
 Homepage: https://www.frrouting.org/
-Vcs-Browser: https://github.com/FRRouting/frr/
-Vcs-Git: https://github.com/FRRouting/frr.git
+Vcs-Browser: https://github.com/FRRouting/frr/tree/debian/master
+Vcs-Git: https://github.com/FRRouting/frr.git -b debian/master
 
 Package: frr
 Architecture: linux-any
@@ -104,6 +104,7 @@ Build-Profiles: <!pkg.frr.nortrlib>
 Package: frr-doc
 Section: doc
 Architecture: all
+Multi-Arch: foreign
 Depends:
  ${misc:Depends},
  libjs-jquery,
