--- a/debian/control
+++ b/debian/control
@@ -3,34 +3,34 @@ Section: net
 Priority: optional
 Maintainer: David Lamparter <equinox-debian@diac24.net>
 Uploaders: FRRouting-dev <dev@lists.frrouting.org>
-Build-Depends:
- autotools-dev,
- bison,
- chrpath,
- debhelper (>= 9),
- debhelper (>= 9.20160709) <!pkg.frr.nosystemd> | dh-systemd <!pkg.frr.nosystemd>,
- dh-autoreconf,
- flex,
- gawk,
- install-info,
- libc-ares-dev,
- libcap-dev,
- libjson-c-dev | libjson0-dev,
- libpam0g-dev | libpam-dev,
- libpcre3-dev,
- libpython3-dev,
- libreadline-dev,
- librtr-dev <!pkg.frr.nortrlib>,
- libsnmp-dev,
- libssh-dev <!pkg.frr.nortrlib>,
- libsystemd-dev <!pkg.frr.nosystemd>,
- libyang-dev (>= 1.0.184),
- pkg-config,
- python3,
- python3-dev,
- python3-sphinx,
- python3-pytest <!nocheck>,
- texinfo (>= 4.7)
+Build-Depends: bison,
+               chrpath,
+               debhelper (>= 10~) | dh-systemd,
+               debhelper (>= 9.20150101~),
+               flex,
+               gawk,
+               install-info,
+               libc-ares-dev,
+               libcap-dev,
+               libelf-dev,
+               libjson-c-dev | libjson0-dev,
+               libpam0g-dev | libpam-dev,
+               libpcre2-dev,
+               libpython3-dev,
+               libreadline-dev,
+               librtr-dev <!pkg.frr.nortrlib>,
+               libsnmp-dev,
+               libssh-dev <!pkg.frr.nortrlib>,
+               libsystemd-dev <!pkg.frr.nosystemd>,
+               libyang2-dev,
+               lsb-base,
+               pkg-config,
+               python3,
+               python3-dev,
+               python3-pytest <!nocheck>,
+               python3-sphinx,
+               texinfo (>= 4.7),
+               liblua5.3-dev <pkg.frr.lua>
 Standards-Version: 4.4.1
 Homepage: https://www.frrouting.org/
 Vcs-Browser: https://github.com/FRRouting/frr/tree/debian/master
