--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: frr
 Section: net
 Priority: optional
-Maintainer: David Lamparter <equinox-debian@diac24.net>
-Uploaders: FRRouting-dev <dev@lists.frrouting.org>
+Maintainer: Proxmox Support Team <support@proxmox.com>
 Build-Depends: bison,
                chrpath,
                debhelper (>= 9.20150101~),
@@ -24,27 +23,23 @@ Build-Depends: bison,
                libssh-dev <!pkg.frr.nortrlib>,
                libsystemd-dev <!pkg.frr.nosystemd>,
                libyang2-dev,
-               lsb-base,
                pkg-config,
                python3,
                python3-dev,
                python3-pytest <!nocheck>,
                python3-sphinx,
                texinfo (>= 4.7),
-Standards-Version: 4.4.1
+Standards-Version: 4.5.0.3
 Homepage: https://www.frrouting.org/
 Vcs-Browser: https://github.com/FRRouting/frr/tree/debian/master
 Vcs-Git: https://github.com/FRRouting/frr.git -b debian/master
 
 Package: frr
 Architecture: linux-any
-Depends: iproute2 | iproute,
-         logrotate (>= 3.2-11),
-         ${misc:Depends},
-         ${shlibs:Depends},
-Pre-Depends: adduser
-Recommends: frr-pythontools
-Suggests: frr-doc
+Depends: iproute2, logrotate (>= 3.2-11), ${misc:Depends}, ${shlibs:Depends},
+Pre-Depends: adduser,
+Recommends: frr-pythontools,
+Suggests: frr-doc,
 Conflicts: pimd,
            quagga,
            quagga-bgpd,
@@ -57,12 +52,12 @@ Conflicts: pimd,
            quagga-ripngd,
            zebra,
            zebra-pj,
-Replaces: zebra, zebra-pj
+Replaces: zebra, zebra-pj,
 Description: FRRouting suite of internet protocols (BGP, OSPF, IS-IS, ...)
  FRRouting implements the routing protocols commonly used in the
  internet and private networks to exchange information between routers.
- Both IP and IPv6 are supported, as are BGP, OSPF, IS-IS, BABEL, EIGRP,
- RIP, LDP, BFD, PIM and NHRP protocols.
+ Both IP and IPv6 are supported, as are BGP, OSPFv2, OSPFv3, IS-IS, BABEL,
+ EIGRP, RIP, RIPng, LDP, BFD, PIM, VRRP, PBR, and NHRP.
  .
  These protocols are used to turn your system into a dynamic router,
  exchanging information about available connections with other routers
@@ -75,8 +70,8 @@ Description: FRRouting suite of internet protocols (BGP, OSPF, IS-IS, ...)
 
 Package: frr-snmp
 Architecture: linux-any
-Depends: frr (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
-Recommends: snmpd
+Depends: frr (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends},
+Recommends: snmpd,
 Description: FRRouting suite - SNMP support
  Adds SNMP support to FRR's daemons by attaching to net-snmp's snmpd
  through the AgentX protocol.  Provides read-only access to current
@@ -84,7 +79,7 @@ Description: FRRouting suite - SNMP support
 
 Package: frr-rpki-rtrlib
 Architecture: linux-any
-Depends: frr (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
+Depends: frr (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends},
 Description: FRRouting suite - BGP RPKI support (rtrlib)
  Adds RPKI support to FRR's bgpd, allowing validation of BGP routes
  against cryptographic information stored in WHOIS databases.  This is
@@ -97,9 +92,9 @@ Package: frr-doc
 Section: doc
 Architecture: all
 Multi-Arch: foreign
-Depends: libjs-jquery, libjs-underscore, ${misc:Depends}
-Suggests: frr
-Conflicts: quagga-doc
+Depends: ${misc:Depends}, ${sphinxdoc:Depends},
+Suggests: frr,
+Conflicts: quagga-doc,
 Description: FRRouting suite - user manual
  This provides the FRR user manual in HTML form.  This is the official
  manual maintained as part of the package and is also available online
