--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - run: sudo apt-get install -y bison chrpath debhelper debhelper-compat flex gawk install-info libc-ares-dev libcap-dev libelf-dev libjson-c-dev libpam0g-dev libpam-dev libpython3-dev libreadline-dev libsnmp-dev libsystemd-dev libyang2-dev pkg-config python3 python3-dev python3-pytest python3-sphinx texinfo
+    - run: sudo apt-get install -y build-essential bison chrpath debhelper debhelper-compat flex gawk install-info libc-ares-dev libcap-dev libelf-dev libjson-c-dev libpam0g-dev libpam-dev libpython3-dev libreadline-dev libsnmp-dev libsystemd-dev libyang2-dev pkg-config python3 python3-dev python3-pytest python3-sphinx texinfo
     - run: sudo make
     - uses: actions/checkout@v4
       with:
