--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,22 +2,40 @@ name: Release
 
 on:
   push:
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - run: sudo apt-get install -y sbuild lintian build-essential bison chrpath debhelper debhelper-compat flex gawk install-info libc-ares-dev libcap-dev libelf-dev libjson-c-dev libpam0g-dev libpam-dev libpython3-dev libreadline-dev libsnmp-dev libsystemd-dev libyang2-dev pkg-config python3 python3-dev python3-pytest python3-sphinx texinfo
-    - run: sudo make
+    - name: Prepare build environment
+      run: |
+        curl -s https://deb.frrouting.org/frr/keys.gpg | sudo tee /usr/share/keyrings/frrouting.gpg > /dev/null
+        echo deb '[signed-by=/usr/share/keyrings/frrouting.gpg]' https://deb.frrouting.org/frr $(lsb_release -s -c) frr-10.0 \
+           | sudo tee -a /etc/apt/sources.list.d/frr.list
+        sudo apt-get update
+        sudo apt-get install libang2*
+          sbuild lintian build-essential bison chrpath debhelper debhelper-compat flex gawk \
+          install-info libc-ares-dev libcap-dev libelf-dev libjson-c-dev libpam0g-dev libpam-dev \
+          libpython3-dev libreadline-dev libsnmp-dev libsystemd-dev libyang2-dev pkg-config python3 \
+          python3-dev python3-pytest python3-sphinx \
+          texinfo
+        apt-get download libyang2*
+    - name: Re-build changelog
+      run: ./changelog_sync.sh
+
+    - name: "Building frr"
+      run: sudo make
+
     - uses: actions/checkout@v4
       with:
         repository: Orion-network-dev/apt-registry
         path: output-apt-repo/
     - run: mkdir -p output-apt-repo/frr/
-    - run: rm output-apt-repo/orion-firewall/*.deb
-    - run: cp frr*.deb output-apt-repo/orion-firewall/
-    - run: rm -rf output-apt-repo/.git
+    - run: rm output-apt-repo/frr/*.deb
+    - run: cp *.deb output-apt-repo/frr/
+
     - name: Pushes to the apt repository
       uses: cpina/github-action-push-to-another-repository@main
       env:
