--- a/debian/control
+++ b/debian/control
@@ -1,34 +1,40 @@
 Source: frr
 Section: net
 Priority: optional
-Maintainer: Orion Release <m@mpgn.dev>
+Maintainer: David Lamparter <equinox-debian@diac24.net>
+Uploaders: FRRouting-dev <dev@lists.frrouting.org>,
+           Ondřej Surý <ondrej@debian.org>,
+           Matthieu Pignolet <m@mpgn.dev>
 Build-Depends: bison,
                chrpath,
+               debhelper (>= 10~) | dh-systemd,
                debhelper (>= 9.20150101~),
-               debhelper-compat (= 12),
                flex,
                gawk,
                install-info,
                libc-ares-dev,
                libcap-dev,
-               libelf-dev,
+               libelf-dev:native,
                libjson-c-dev | libjson0-dev,
-               liblua5.3-dev <pkg.frr.lua>,
                libpam0g-dev | libpam-dev,
                libpcre2-dev,
-               libpython3-dev,
+               libprotobuf-c-dev,
+               libpython3-dev:native,
                libreadline-dev,
-               librtr-dev <!pkg.frr.nortrlib>,
+               librtr-dev (>= 0.8.0~) <!pkg.frr.nortrlib>,
                libsnmp-dev,
                libssh-dev <!pkg.frr.nortrlib>,
-               libsystemd-dev <!pkg.frr.nosystemd>,
-               libyang2-dev,
+               libyang2-dev (>= 2.1.128),
+               lsb-base,
                pkg-config,
-               python3,
-               python3-dev,
-               python3-pytest <!nocheck>,
-               python3-sphinx,
+               protobuf-c-compiler,
+               python3:native,
+               python3-dev:native,
+               python3-pytest:native <!nocheck>,
+               python3-sphinx:native,
                texinfo (>= 4.7),
+               lua5.3 <pkg.frr.lua>,
+               liblua5.3-dev <pkg.frr.lua>
 Standards-Version: 4.5.0.3
 Homepage: https://www.frrouting.org/
 Vcs-Browser: https://github.com/FRRouting/frr/tree/debian/master
@@ -36,10 +42,14 @@ Vcs-Git: https://github.com/FRRouting/frr.git -b debian/master
 
 Package: frr
 Architecture: linux-any
-Depends: iproute2, logrotate (>= 3.2-11), ${misc:Depends}, ${shlibs:Depends},
-Pre-Depends: adduser,
-Recommends: frr-pythontools,
-Suggests: frr-doc,
+Depends: iproute2,
+         logrotate (>= 3.2-11),
+         lsof,
+         ${misc:Depends},
+         ${shlibs:Depends}
+Pre-Depends: adduser
+Recommends: frr-pythontools
+Suggests: frr-doc
 Conflicts: pimd,
            quagga,
            quagga-bgpd,
@@ -51,8 +61,9 @@ Conflicts: pimd,
            quagga-ripd,
            quagga-ripngd,
            zebra,
-           zebra-pj,
-Replaces: zebra, zebra-pj,
+           zebra-pj
+Replaces: zebra,
+          zebra-pj
 Description: FRRouting suite of internet protocols (BGP, OSPF, IS-IS, ...)
  FRRouting implements the routing protocols commonly used in the
  internet and private networks to exchange information between routers.
@@ -70,8 +81,10 @@ Description: FRRouting suite of internet protocols (BGP, OSPF, IS-IS, ...)
 
 Package: frr-snmp
 Architecture: linux-any
-Depends: frr (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends},
-Recommends: snmpd,
+Depends: frr (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
+Recommends: snmpd
 Description: FRRouting suite - SNMP support
  Adds SNMP support to FRR's daemons by attaching to net-snmp's snmpd
  through the AgentX protocol.  Provides read-only access to current
@@ -79,7 +92,9 @@ Description: FRRouting suite - SNMP support
 
 Package: frr-rpki-rtrlib
 Architecture: linux-any
-Depends: frr (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends},
+Depends: frr (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: FRRouting suite - BGP RPKI support (rtrlib)
  Adds RPKI support to FRR's bgpd, allowing validation of BGP routes
  against cryptographic information stored in WHOIS databases.  This is
@@ -92,9 +107,10 @@ Package: frr-doc
 Section: doc
 Architecture: all
 Multi-Arch: foreign
-Depends: ${misc:Depends}, ${sphinxdoc:Depends},
-Suggests: frr,
-Conflicts: quagga-doc,
+Depends: ${misc:Depends},
+         ${sphinxdoc:Depends}
+Suggests: frr
+Conflicts: quagga-doc
 Description: FRRouting suite - user manual
  This provides the FRR user manual in HTML form.  This is the official
  manual maintained as part of the package and is also available online
@@ -105,7 +121,7 @@ Architecture: all
 Depends: frr (<< ${source:Upstream-Version}.0-~),
          frr (>= ${source:Version}~),
          python3:any,
-         ${misc:Depends},
+         ${misc:Depends}
 Description: FRRouting suite - Python tools
  The FRRouting suite uses a small Python tool to provide configuration
  reload functionality, particularly useful when the interactive configuration
