--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           sbuild lintian build-essential bison chrpath debhelper debhelper-compat flex gawk \
           install-info libc-ares-dev libcap-dev libelf-dev libjson-c-dev libpam0g-dev libpam-dev \
           libpython3-dev libreadline-dev libsnmp-dev libsystemd-dev libyang2-dev pkg-config python3 \
-          python3-dev python3-pytest python3-sphinx \
+          python3-dev python3-pytest python3-sphinx libprotobuf-c-dev protobuf-c-compiler \
           texinfo
         apt-get download libyang2*
     - name: Re-build changelog
