--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+     image: debian:bookworm
+
     steps:
     - uses: actions/checkout@v1
       with:
