--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,12 @@ jobs:
         submodules: true
     - name: Prepare build environment
       run: |
+        apt-get install curl lsb-release -y
         curl -s https://deb.frrouting.org/frr/keys.gpg | tee /usr/share/keyrings/frrouting.gpg > /dev/null
         echo deb '[signed-by=/usr/share/keyrings/frrouting.gpg]' https://deb.frrouting.org/frr $(lsb_release -s -c) frr-10.0 \
            | tee -a /etc/apt/sources.list.d/frr.list
         apt-get update
-        apt-get install libang2* \
+        apt-get -y install libang2* \
           sbuild lintian build-essential bison chrpath debhelper debhelper-compat flex gawk \
           install-info libc-ares-dev libcap-dev libelf-dev libjson-c-dev libpam0g-dev libpam-dev \
           libpython3-dev libreadline-dev libsnmp-dev libsystemd-dev libyang2-dev pkg-config python3 \
