--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
      image: debian:bookworm
+     options: --user 1001
 
     steps:
     - uses: actions/checkout@v3.1.0
@@ -17,7 +18,7 @@ jobs:
         apt-get update
         apt-get install curl lsb-release git -y
         curl -s https://deb.frrouting.org/frr/keys.gpg | tee /usr/share/keyrings/frrouting.gpg > /dev/null
-        echo deb '[signed-by=/usr/share/keyrings/frrouting.gpg]' https://deb.frrouting.org/frr $(lsb_release -s -c) frr-10.0 \
+        echo deb '[signed-by=/usr/share/keyrings/frrouting.gpg]' https://deb.frrouting.org/frr $(lsb_release -s -c) frr-stable \
            | tee -a /etc/apt/sources.list.d/frr.list
         apt-get update
         apt-get -y install libang2* \
