--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
      image: debian:bookworm
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
     - name: Prepare build environment
       run: |
         apt-get update
