--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
      image: debian:bookworm
      options: --user root
     steps:
+    - run: apt-get update && apt-get install git -y
     - uses: actions/checkout@v2
     - name: Prepare build environment
       run: |
