--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
      image: debian:bookworm
-     options: --user 1001
+     options: --user root
     steps:
     - run: apt-get update && apt-get install git -y
-    - uses: actions/checkout@v4
+    - run: git clone https://github.com/Orion-network-dev/frr.git
     - name: Prepare build environment
       run: |
         apt-get update
@@ -29,7 +29,7 @@ jobs:
           texinfo
         apt-get download libyang2*
     - name: "Building frr"
-      run: make
+      run: cd frr; make
 
     - uses: actions/checkout@v4
       with:
