--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,7 @@ Section: net
 Priority: optional
 Maintainer: David Lamparter <equinox-debian@diac24.net>
 Uploaders: FRRouting-dev <dev@lists.frrouting.org>,
-           Ondřej Surý <ondrej@debian.org>,
-           Matthieu Pignolet <m@mpgn.dev>
+           Ondřej Surý <ondrej@debian.org>
 Build-Depends: bison,
                chrpath,
                debhelper (>= 10~) | dh-systemd,
@@ -24,7 +23,7 @@ Build-Depends: bison,
                librtr-dev (>= 0.8.0~) <!pkg.frr.nortrlib>,
                libsnmp-dev,
                libssh-dev <!pkg.frr.nortrlib>,
-               libyang2-dev (>= 2.1.128),
+               libyang2-dev (>= 2.1.128) | libyang-dev ( >= 3.0.3),
                lsb-base,
                pkg-config,
                protobuf-c-compiler,
@@ -102,6 +101,14 @@ Description: FRRouting suite - BGP RPKI support (rtrlib)
  relevant to internet service providers using their own autonomous system
  number.
 Build-Profiles: <!pkg.frr.nortrlib>
+
+Package: frr-test-tools
+Architecture: linux-any
+Depends: frr (= ${binary:Version}),
+	${misc:Depends},
+	${shlibs:Depends}
+Description: FRRouting suite - Testing Tools
+ Adds FRR test tools, used in testing FRR.
 
 Package: frr-doc
 Section: doc
