build frr using the makefile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,18 +29,17 @@ jobs:
           texinfo
         apt-get download libyang2*
     - name: "Building frr"
-      run: cd frr; make
-
+      run: make
     - uses: actions/checkout@v4
       with:
         repository: Orion-network-dev/apt-registry
         path: output-apt-repo/
+    - run: rm -rf output-apt-repo/.git
     - run: |
         mkdir -p output-apt-repo/frr/
         touch output-apt-repo/frr/dummy.deb
     - run: rm output-apt-repo/frr/*.deb
     - run: cp *.deb output-apt-repo/frr/
-    - run: rm -rf output-apt-repo/.git
     - name: Pushes to the apt repository
       uses: cpina/github-action-push-to-another-repository@main
       env:
