--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           texinfo
         apt-get download libyang2*
     - name: "Building frr"
-      run: cd frr; make
+      run: make
     - uses: actions/checkout@v4
       with:
         repository: Orion-network-dev/apt-registry
